# Open-source-6DoF-Head-Tracking-for-X-Plane-12

./: .gitignore  CONVERSATION.md  DEVELOPMENT.md  NONLINEAR_SCALING.md  README.md  ROADMAP.md  SESSION.md  TESTING.md
docs/: DESIGN_BRIEFING.md  USER_FLOW.md
ios/LidarSightXP/: Podfile  project.yml
ios/LidarSightXP/LidarSightXP.xcodeproj/: project.pbxproj
ios/LidarSightXP/LidarSightXP.xcodeproj/project.xcworkspace/xcuserdata/modernamusmenet.xcuserdatad/: UserInterfaceState.xcuserstate
ios/LidarSightXP/LidarSightXP.xcodeproj/xcuserdata/modernamusmenet.xcuserdatad/xcschemes/: xcschememanagement.plist
ios/LidarSightXP/LidarSightXP.xcworkspace/: contents.xcworkspacedata
ios/LidarSightXP/LidarSightXP.xcworkspace/xcuserdata/modernamusmenet.xcuserdatad/: UserInterfaceState.xcuserstate
ios/LidarSightXP/LidarSightXP/Resources/: Info.plist
ios/LidarSightXP/LidarSightXP/Sources/AR/: ARTrackingManager.swift
ios/LidarSightXP/LidarSightXP/Sources/App/: LidarSightXPApp.swift
ios/LidarSightXP/LidarSightXP/Sources/Models/: CalibrationManager.swift  HeadPose.swift  HeadPosePacket.swift
ios/LidarSightXP/LidarSightXP/Sources/Network/: FlightDataManager.swift
ios/LidarSightXP/LidarSightXP/Sources/Transport/: TransportManager.swift
ios/LidarSightXP/LidarSightXP/Sources/UI/: ARSceneView.swift  ContentView.swift  FlightDataPanel.swift  HeadIconOverlay.swift
macos/HeadTrackerDebugger/: project.yml
macos/HeadTrackerDebugger/HeadTrackerDebugger/App/: HeadTrackerDebuggerApp.swift
macos/HeadTrackerDebugger/HeadTrackerDebugger/Models/: Shared.swift
macos/HeadTrackerDebugger/HeadTrackerDebugger/Network/: TCPListener.swift  UDPListerner.swift
macos/HeadTrackerDebugger/HeadTrackerDebugger/Processing/: OneEuroFilter.swift  PacketParser.swift
macos/HeadTrackerDebugger/HeadTrackerDebugger/Resources/: Info.plist
macos/HeadTrackerDebugger/HeadTrackerDebugger/Views/: ContentView.swift  SettingsPanel.swift  StatusPanel.swift  ValuesPanel.swift  WindshieldView3D.swift
macos/LidarSightXP/: CMakeLists.txt
macos/LidarSightXP/Sources/: LidarSightXP.cpp  LidarSightXP.h
macos/LidarSightXP/Sources/Processing/: OneEuroFilter.h
